--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/redux": "^3.6.0",
+    "gh-pages": "^4.0.0",
+    "netlify-cli": "^12.0.7",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,7 +29,9 @@
     "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +53,6 @@
   },
   "devDependencies": {
     "@types/xml-escape": "^1.1.0"
-  }
+  },
+  "homepage": "https://Paula066.github.io/fireArt"
 }
